[package]
description = "An event(error,warning) report system for compile toolchain."
documentation = "https://docs.rs/ceport"
edition = "2024"
license = "MIT"
name = "ceport"
repository = "https://github.com/styles-lab/ceport"
version = "0.1.3"

[dependencies]
serde = {version = "^1.0", features = ["derive"], optional = true}
thiserror = {version = "^2.0"}

[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}
serde_json = {version = "^1"}
