[package]
description = "Beautiful diagnostic reporting for compilation/decoding/deserialzation apps."
documentation = "https://docs.rs/ceport"
edition = "2024"
license = "MIT"
name = "ceport"
repository = "https://github.com/styles-lab/ceport"
version = "0.1.0"

[dependencies]
serde = {version = "^1.0", features = ["derive"]}
thiserror = {version = "^2.0"}

[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}
