[package]
description = "Beautiful diagnostic reporting for compilation/decoding/deserialzation apps."
documentation = "https://docs.rs/ceport"
edition = "2024"
license = "MIT"
name = "ceport"
repository = "https://github.com/styles-lab/ceport"
version = "0.1.0"

[dependencies]
log = {version = "^0.4"}
serde = {version = "^1.0", features = ["derive"]}
termcolor = {version = "^1.4"}
thiserror = {version = "^2.0"}
unicode-width = {version = "^0.2"}
unindent = {version = "^0.2"}
[dev-dependencies]
divan = {version = "^0.1"}
pretty_env_logger = {version = "^0.5"}

[features]
default = ["global"]

global = []
